src/objects/TMFC_TeamForce_Key_Decision__c.object
<CustomObject>
    <fields>
        <fullName>TMFC_Key_Decision_Detail__c</fullName>
        <label>Key Decision Detail</label>
        <length>5000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>TMFC_Key_Decision_Sign_Off_Date__c</fullName>
        <label>Key Decision Sign-Off Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TMFC_Key_Decision_Sign_Off__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Key Decision Sign-Off</label>
        <referenceTo>User</referenceTo>
        <relationshipName>TeamForce_Key_Decisions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TMFC_Key_Decision_Status__c</fullName>
        <label>Key Decision Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Confirmed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TMFC_Key_Decision_Title__c</fullName>
        <label>Key Decision Title</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TMFC_Project__c</fullName>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Project Key Decisions</relationshipLabel>
        <relationshipName>TeamForce_Key_Decisions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <label>TeamForce Key Decision</label>
    <nameField>
        <displayFormat>TMKD-{000000000}</displayFormat>
        <label>TeamForce Key Decision ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TeamForce Key Decisions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>